--- a/EventaDesktop.csproj
+++ b/EventaDesktop.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AddEvent.Designer.cs">
       <DependentUpon>AddEvent.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserData.cs" />
     <Compile Include="ValidationHelper.cs" />
     <Compile Include="Dashboard.cs">
       <SubType>UserControl</SubType>
